[package]
name = "lamhshaorga-v2"
version = "0.1.0"
authors = ["Bobfritguy <seamusknightly@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.72.1"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
toml_config = []

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-hal = "0.42.5"
esp-idf-svc = "0.47.3"
embedded-svc = "0.26.4"
embedded-hal = "1.0.0-rc.1"
anyhow = "1.0.79"
embedded-graphics = "0.8.1"
ssd1306 = "0.8.4"
esp-idf-sys = "0.33.7"
toml-cfg = "0.1.3"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.2" }

[build-dependencies]
embuild = "0.31.3"
